# observatory

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  SPEC.md  deny.toml
.codegraph/: changes.journal  graph.db
docs/agents/: issue-tracker.md
docs/prototypes/: observatory-cli-contract.html  observatory-index-navigation.html
docs/research/: 2026-07-09-observatory-backup-topology.md  2026-07-09-observatory-bootstrap-authority.md  2026-07-09-observatory-implementation-stack.md  2026-07-09-observatory-persistence-architecture.md  2026-07-09-observatory-public-control-plane.md  2026-07-09-observatory-storage-diagnostics-recovery.md  2026-07-09-tailscale-serve-live-services.md
docs/research/evidence/: 2026-07-09-tailscale-serve-probe.md
docs/reviews/: observatory-handoff-review.html
src/: artifact.rs  artifact_source.rs  artifact_storage.rs  catalogue.rs  cli.rs  config.rs  crypto.rs  csrf.rs  cursor.rs  daemon.rs  error.rs  main.rs  project.rs  revision_manifest.rs  route_slug.rs  runtime_lock.rs  safe_file.rs  storage_boundary.rs  storage_status.rs  ui.rs  web.rs
src/assets/: app.css  app.js  index.html
tests/: black_box.rs
