[package]
name = "observatory"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.1"
description = "Private catalogue for browser-based agent work"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Whamp/observatory"
documentation = "https://github.com/Whamp/observatory"
keywords = ["catalogue", "artifacts", "services"]
categories = ["command-line-utilities", "web-programming::http-server"]
publish = false

[[bin]]
name = "obs"
path = "src/main.rs"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.41", features = ["derive"] }
reqwest = { version = "0.12.22", default-features = false, features = ["blocking", "json", "rustls-tls-webpki-roots"] }
rusqlite = { version = "0.37.0", features = ["backup", "bundled"] }
rustix = { version = "1.0.8", features = ["fs", "process"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.44", features = ["formatting", "macros"] }
tokio = { version = "1.46.1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
toml = "0.9.2"
url = "2.5.4"

[dev-dependencies]
tempfile = "3.20.0"

[profile.release]
lto = "thin"
strip = "debuginfo"
codegen-units = 1
